feat: include swaggo to fiber3
