# fiber3-petclinic-service/api/owner/owner_router.go
@@ -36,7 +36,7 @@ func (r *Router) Register(router fiber.Router) {
 //
 // @Description	Get all owners
 // @Produce		json
-// @Success		200	{object}	Responses
+// @Success		200	{object}	responses
 // @Failure		404	{object}	errors.ErrorResponse
 // @Failure		500	{object}	errors.ErrorResponse
 // @Router		/owners/all		[get]
@@ -59,7 +59,7 @@ func (r *Router) allOwners(c fiber.Ctx) error {
 // @Description	Get owner by ID
 // @Param		id	path	int	true	"Owner ID"
 // @Produce		json
-// @Success		200	{object}	Response
+// @Success		200	{object}	response
 // @Failure		400	{object}	errors.ErrorResponse
 // @Failure		404	{object}	errors.ErrorResponse
 // @Failure		500	{object}	errors.ErrorResponse
@@ -95,7 +95,7 @@ func (r *Router) ownerById(c fiber.Ctx) error {
 // @Description	Get owner that has pets by ID
 // @Param		id	path	int	true	"Owner ID"
 // @Produce		json
-// @Success		200	{object}	Response
+// @Success		200	{object}	response
 // @Failure		400	{object}	errors.ErrorResponse
 // @Failure		404	{object}	errors.ErrorResponse
 // @Failure		500	{object}	errors.ErrorResponse
@@ -131,7 +131,7 @@ func (r *Router) ownerByIdWithPets(c fiber.Ctx) error {
 // @Description	Get owners by last name
 // @Param		last-name	query	string	true	"Owner last name"
 // @Produce		json
-// @Success		200	{object}	Responses
+// @Success		200	{object}	responses
 // @Failure		404	{object}	errors.ErrorResponse
 // @Failure		500	{object}	errors.ErrorResponse
 // @Router		/owners [get]
@@ -155,7 +155,7 @@ func (r *Router) ownersByLastName(c fiber.Ctx) error {
 // @Description	Insert new owner
 // @Produce		json
 // @Param		Request			body	addRequest	true	"Add owner"
-// @Success		200	{object}	UpdateResponse
+// @Success		200	{object}	updateResponse
 // @Failure		400	{object}	errors.ErrorResponse
 // @Failure		500	{object}	errors.ErrorResponse
 // @Router		/owners 		[post]
@@ -184,8 +184,8 @@ func (r *Router) addNewOwner(c fiber.Ctx) error {
 // @Description	Update new owner
 // @Produce		json
 // @Param		id	path	int	true	"Owner ID"
-// @Param		Request			body	UpdateRequest	true	"Update owner"
-// @Success		200	{object}	UpdateResponse
+// @Param		Request			body	updateRequest	true	"Update owner"
+// @Success		200	{object}	updateResponse
 // @Failure		400	{object}	errors.ErrorResponse
 // @Failure		500	{object}	errors.ErrorResponse
 // @Router		/owners/{id} 	[put]
