# fiber3-petclinic-service/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api/pet-clinic/v1
 definitions:
   errors.ErrorResponse:
     properties:
@@ -12,7 +13,7 @@ definitions:
       count:
         type: integer
     type: object
-  owner.AddRequest:
+  owner.addRequest:
     properties:
       address:
         type: string
@@ -25,7 +26,18 @@ definitions:
       telephone:
         type: string
     type: object
-  owner.Response:
+  owner.petResponse:
+    properties:
+      birthdate:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      species:
+        type: string
+    type: object
+  owner.response:
     properties:
       address:
         type: string
@@ -39,21 +51,21 @@ definitions:
         type: string
       pets:
         items:
-          $ref: '#/definitions/pet.Response'
+          $ref: '#/definitions/owner.petResponse'
         type: array
       telephone:
         type: string
     type: object
-  owner.Responses:
+  owner.responses:
     properties:
       context:
         $ref: '#/definitions/model.Context'
       owners:
         items:
-          $ref: '#/definitions/owner.Response'
+          $ref: '#/definitions/owner.response'
         type: array
     type: object
-  owner.UpdateRequest:
+  owner.updateRequest:
     properties:
       address:
         type: string
@@ -68,7 +80,7 @@ definitions:
       telephone:
         type: string
     type: object
-  owner.UpdateResponse:
+  owner.updateResponse:
     properties:
       address:
         type: string
@@ -83,7 +95,7 @@ definitions:
       telephone:
         type: string
     type: object
-  pet.AddRequest:
+  pet.addRequest:
     properties:
       birthdate:
         type: string
@@ -99,7 +111,7 @@ definitions:
     - ownerID
     - speciesID
     type: object
-  pet.Response:
+  pet.response:
     properties:
       birthdate:
         type: string
@@ -111,19 +123,19 @@ definitions:
         type: string
       visits:
         items:
-          $ref: '#/definitions/visit.Response'
+          $ref: '#/definitions/pet.visitResponse'
         type: array
     type: object
-  pet.Responses:
+  pet.responses:
     properties:
       context:
         $ref: '#/definitions/model.Context'
       pets:
         items:
-          $ref: '#/definitions/pet.Response'
+          $ref: '#/definitions/pet.response'
         type: array
     type: object
-  pet.UpdateRequest:
+  pet.updateRequest:
     properties:
       birthdate:
         type: string
@@ -142,7 +154,18 @@ definitions:
     - ownerID
     - speciesID
     type: object
-  vet.Response:
+  pet.visitResponse:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      petID:
+        type: integer
+      visitDate:
+        type: string
+    type: object
+  vet.response:
     properties:
       firstName:
         type: string
@@ -155,13 +178,13 @@ definitions:
           $ref: '#/definitions/vet.specialtyResponse'
         type: array
     type: object
-  vet.Responses:
+  vet.responses:
     properties:
       context:
         $ref: '#/definitions/model.Context'
       vets:
         items:
-          $ref: '#/definitions/vet.Response'
+          $ref: '#/definitions/vet.response'
         type: array
     type: object
   vet.specialtyResponse:
@@ -171,7 +194,7 @@ definitions:
       name:
         type: string
     type: object
-  visit.Response:
+  visit.response:
     properties:
       description:
         type: string
@@ -182,16 +205,16 @@ definitions:
       visitDate:
         type: string
     type: object
-  visit.Responses:
+  visit.responses:
     properties:
       context:
         $ref: '#/definitions/model.Context'
       visits:
         items:
-          $ref: '#/definitions/visit.Response'
+          $ref: '#/definitions/visit.response'
         type: array
     type: object
-  visit.UpdateRequest:
+  visit.updateRequest:
     properties:
       description:
         type: string
@@ -206,8 +229,21 @@ definitions:
     - petID
     - visitDate
     type: object
+externalDocs:
+  description: OpenAPI
+  url: https://swagger.io/resources/open-api/
+host: localhost:8092
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
+  title: Pet Clinic API
+  version: "1.0"
 paths:
   /owners:
     get:
@@ -224,7 +260,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/owner.Responses'
+            $ref: '#/definitions/owner.responses'
         "404":
           description: Not Found
           schema:
@@ -244,14 +280,14 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/owner.AddRequest'
+          $ref: '#/definitions/owner.addRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/owner.UpdateResponse'
+            $ref: '#/definitions/owner.updateResponse'
         "400":
           description: Bad Request
           schema:
@@ -278,7 +314,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/owner.Response'
+            $ref: '#/definitions/owner.response'
         "400":
           description: Bad Request
           schema:
@@ -307,14 +343,14 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/owner.UpdateRequest'
+          $ref: '#/definitions/owner.updateRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/owner.UpdateResponse'
+            $ref: '#/definitions/owner.updateResponse'
         "400":
           description: Bad Request
           schema:
@@ -341,7 +377,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/owner.Response'
+            $ref: '#/definitions/owner.response'
         "400":
           description: Bad Request
           schema:
@@ -366,7 +402,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/owner.Responses'
+            $ref: '#/definitions/owner.responses'
         "404":
           description: Not Found
           schema:
@@ -393,7 +429,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pet.Responses'
+            $ref: '#/definitions/pet.responses'
         "404":
           description: Not Found
           schema:
@@ -413,14 +449,14 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/pet.AddRequest'
+          $ref: '#/definitions/pet.addRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pet.Responses'
+            $ref: '#/definitions/pet.responses'
         "400":
           description: Bad Request
           schema:
@@ -451,7 +487,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pet.Responses'
+            $ref: '#/definitions/pet.responses'
         "404":
           description: Not Found
           schema:
@@ -476,14 +512,14 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/pet.UpdateRequest'
+          $ref: '#/definitions/pet.updateRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pet.Responses'
+            $ref: '#/definitions/pet.responses'
         "400":
           description: Bad Request
           schema:
@@ -514,7 +550,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pet.Responses'
+            $ref: '#/definitions/pet.responses'
         "400":
           description: Bad Request
           schema:
@@ -539,7 +575,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pet.Responses'
+            $ref: '#/definitions/pet.responses'
         "404":
           description: Not Found
           schema:
@@ -560,7 +596,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/vet.Responses'
+            $ref: '#/definitions/vet.responses'
         "404":
           description: Not Found
           schema:
@@ -587,7 +623,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/visit.Response'
+            $ref: '#/definitions/visit.response'
         "400":
           description: Bad Request
           schema:
@@ -613,17 +649,17 @@ paths:
         type: integer
       - description: Update visit
         in: body
-        name: Request
+        name: request
         required: true
         schema:
-          $ref: '#/definitions/visit.UpdateRequest'
+          $ref: '#/definitions/visit.updateRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/visit.Responses'
+            $ref: '#/definitions/visit.responses'
         "404":
           description: Not Found
           schema:
@@ -644,7 +680,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/visit.Responses'
+            $ref: '#/definitions/visit.responses'
         "404":
           description: Not Found
           schema:
@@ -656,4 +692,7 @@ paths:
       summary: List all visits
       tags:
       - visits
+securityDefinitions:
+  BasicAuth:
+    type: basic
 swagger: "2.0"
